--- a/dependency-info.html
+++ b/dependency-info.html
@@ -3,7 +3,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
   <head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-    <title>OpenWMS.org COMMON - Dependency Information</title>
+    <title>org.openwms.common.shared - Dependency Information</title>
     <style type="text/css" media="all">
       @import url("./css/maven-base.css");
       @import url("./css/maven-theme.css");
@@ -17,7 +17,7 @@
   <body class="composite">
     <div id="banner">
                     <div id="bannerLeft">
-                OpenWMS.org COMMON
+                org.openwms.common.shared
                 </div>
                     <div class="clear">
         <hr/>
@@ -30,7 +30,7 @@
         <span id="publishDate">Last Published: 2016-08-25</span>
                   &nbsp;| <span id="projectVersion">Version: 1.1.0-SNAPSHOT</span>
                       </div>
-            <div class="xright">                    <a href="./" title="OpenWMS.org COMMON">OpenWMS.org COMMON</a>
+            <div class="xright">                    <a href="./" title="org.openwms.common.shared">org.openwms.common.shared</a>
               
                     
       </div>
@@ -45,24 +45,12 @@
                                 <h5>Parent Project</h5>
                   <ul>
                   <li class="none">
-                          <a href="../index.html" title="OpenWMS.org Project">OpenWMS.org Project</a>
-            </li>
-          </ul>
-                       <h5>Modules</h5>
-                  <ul>
-                  <li class="none">
-                          <a href="org.openwms.common.comm/index.html" title="org.openwms.common.comm">org.openwms.common.comm</a>
-            </li>
-                  <li class="none">
-                          <a href="org.openwms.common.service/index.html" title="org.openwms.common.service">org.openwms.common.service</a>
-            </li>
-                  <li class="none">
-                          <a href="org.openwms.common.shared/index.html" title="org.openwms.common.shared">org.openwms.common.shared</a>
+                          <a href="../index.html" title="OpenWMS.org COMMON">OpenWMS.org COMMON</a>
             </li>
           </ul>
                        <h5>Project Documentation</h5>
                   <ul>
-                                                                                                                                                                                                                                                                                                                                                            <li class="expanded">
+                                                                                                                                                                                                                                                                                                                                          <li class="expanded">
                           <a href="project-info.html" title="Project Information">Project Information</a>
                     <ul>
                       <li class="none">
@@ -94,9 +82,6 @@
             </li>
                       <li class="none">
                           <a href="mail-lists.html" title="Mailing Lists">Mailing Lists</a>
-            </li>
-                      <li class="none">
-                          <a href="modules.html" title="Project Modules">Project Modules</a>
             </li>
                       <li class="none">
                           <a href="plugin-management.html" title="Plugin Management">Plugin Management</a>
@@ -132,38 +117,37 @@
 <div class="source">
 <pre>&lt;dependency&gt;
   &lt;groupId&gt;org.openwms&lt;/groupId&gt;
-  &lt;artifactId&gt;org.openwms.common&lt;/artifactId&gt;
+  &lt;artifactId&gt;org.openwms.common.shared&lt;/artifactId&gt;
   &lt;version&gt;1.1.0-SNAPSHOT&lt;/version&gt;
-  &lt;type&gt;pom&lt;/type&gt;
 &lt;/dependency&gt;</pre></div></div>
 <div class="section">
 <h3>Apache Buildr<a name="Apache_Buildr"></a></h3><a name="Apache_Buildr"></a>
 <div class="source">
-<pre>'org.openwms:org.openwms.common:pom:1.1.0-SNAPSHOT'</pre></div></div>
+<pre>'org.openwms:org.openwms.common.shared:jar:1.1.0-SNAPSHOT'</pre></div></div>
 <div class="section">
 <h3>Apache Ivy<a name="Apache_Ivy"></a></h3><a name="Apache_Ivy"></a>
 <div class="source">
-<pre>&lt;dependency org=&quot;org.openwms&quot; name=&quot;org.openwms.common&quot; rev=&quot;1.1.0-SNAPSHOT&quot;&gt;
-  &lt;artifact name=&quot;org.openwms.common&quot; type=&quot;pom&quot; /&gt;
+<pre>&lt;dependency org=&quot;org.openwms&quot; name=&quot;org.openwms.common.shared&quot; rev=&quot;1.1.0-SNAPSHOT&quot;&gt;
+  &lt;artifact name=&quot;org.openwms.common.shared&quot; type=&quot;jar&quot; /&gt;
 &lt;/dependency&gt;</pre></div></div>
 <div class="section">
 <h3>Groovy Grape<a name="Groovy_Grape"></a></h3><a name="Groovy_Grape"></a>
 <div class="source">
 <pre>@Grapes(
-@Grab(group='org.openwms', module='org.openwms.common', version='1.1.0-SNAPSHOT')
+@Grab(group='org.openwms', module='org.openwms.common.shared', version='1.1.0-SNAPSHOT')
 )</pre></div></div>
 <div class="section">
 <h3>Gradle/Grails<a name="GradleGrails"></a></h3><a name="GradleGrails"></a>
 <div class="source">
-<pre>compile 'org.openwms:org.openwms.common:1.1.0-SNAPSHOT'</pre></div></div>
+<pre>compile 'org.openwms:org.openwms.common.shared:1.1.0-SNAPSHOT'</pre></div></div>
 <div class="section">
 <h3>Scala SBT<a name="Scala_SBT"></a></h3><a name="Scala_SBT"></a>
 <div class="source">
-<pre>libraryDependencies += &quot;org.openwms&quot; % &quot;org.openwms.common&quot; % &quot;1.1.0-SNAPSHOT&quot;</pre></div></div>
+<pre>libraryDependencies += &quot;org.openwms&quot; % &quot;org.openwms.common.shared&quot; % &quot;1.1.0-SNAPSHOT&quot;</pre></div></div>
 <div class="section">
 <h3>Leiningen<a name="Leiningen"></a></h3><a name="Leiningen"></a>
 <div class="source">
-<pre>[org.openwms/org.openwms.common &quot;1.1.0-SNAPSHOT&quot;]</pre></div></div></div>
+<pre>[org.openwms/org.openwms.common.shared &quot;1.1.0-SNAPSHOT&quot;]</pre></div></div></div>
       </div>
     </div>
     <div class="clear">
