--- a/project-summary.html
+++ b/project-summary.html
@@ -3,7 +3,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
   <head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-    <title>OpenWMS.org COMMON - Project Summary</title>
+    <title>org.openwms.common.shared - Project Summary</title>
     <style type="text/css" media="all">
       @import url("./css/maven-base.css");
       @import url("./css/maven-theme.css");
@@ -17,7 +17,7 @@
   <body class="composite">
     <div id="banner">
                     <div id="bannerLeft">
-                OpenWMS.org COMMON
+                org.openwms.common.shared
                 </div>
                     <div class="clear">
         <hr/>
@@ -30,7 +30,7 @@
         <span id="publishDate">Last Published: 2016-08-25</span>
                   &nbsp;| <span id="projectVersion">Version: 1.1.0-SNAPSHOT</span>
                       </div>
-            <div class="xright">                    <a href="./" title="OpenWMS.org COMMON">OpenWMS.org COMMON</a>
+            <div class="xright">                    <a href="./" title="org.openwms.common.shared">org.openwms.common.shared</a>
               
                     
       </div>
@@ -45,24 +45,12 @@
                                 <h5>Parent Project</h5>
                   <ul>
                   <li class="none">
-                          <a href="../index.html" title="OpenWMS.org Project">OpenWMS.org Project</a>
-            </li>
-          </ul>
-                       <h5>Modules</h5>
-                  <ul>
-                  <li class="none">
-                          <a href="org.openwms.common.comm/index.html" title="org.openwms.common.comm">org.openwms.common.comm</a>
-            </li>
-                  <li class="none">
-                          <a href="org.openwms.common.service/index.html" title="org.openwms.common.service">org.openwms.common.service</a>
-            </li>
-                  <li class="none">
-                          <a href="org.openwms.common.shared/index.html" title="org.openwms.common.shared">org.openwms.common.shared</a>
+                          <a href="../index.html" title="OpenWMS.org COMMON">OpenWMS.org COMMON</a>
             </li>
           </ul>
                        <h5>Project Documentation</h5>
                   <ul>
-                                                                                                                                                                                                                                                                                                                                                            <li class="expanded">
+                                                                                                                                                                                                                                                                                                                                          <li class="expanded">
                           <a href="project-info.html" title="Project Information">Project Information</a>
                     <ul>
                       <li class="none">
@@ -94,9 +82,6 @@
             </li>
                       <li class="none">
                           <a href="mail-lists.html" title="Mailing Lists">Mailing Lists</a>
-            </li>
-                      <li class="none">
-                          <a href="modules.html" title="Project Modules">Project Modules</a>
             </li>
                       <li class="none">
                           <a href="plugin-management.html" title="Plugin Management">Plugin Management</a>
@@ -135,13 +120,13 @@
 <th>Value</th></tr>
 <tr class="b">
 <td>Name</td>
-<td>OpenWMS.org COMMON</td></tr>
+<td>org.openwms.common.shared</td></tr>
 <tr class="a">
 <td>Description</td>
 <td>OpenWMS.org is an open source warehouse management software</td></tr>
 <tr class="b">
 <td>Homepage</td>
-<td><a class="externalLink" href="http://www.openwms.org/org.openwms.common">http://www.openwms.org/org.openwms.common</a></td></tr></table></div>
+<td><a class="externalLink" href="http://www.openwms.org/org.openwms.common/org.openwms.common.shared">http://www.openwms.org/org.openwms.common/org.openwms.common.shared</a></td></tr></table></div>
 <div class="section">
 <h3>Project Organization<a name="Project_Organization"></a></h3><a name="Project_Organization"></a>
 <table border="0" class="bodyTable">
@@ -165,13 +150,16 @@
 <td>org.openwms</td></tr>
 <tr class="a">
 <td>ArtifactId</td>
-<td>org.openwms.common</td></tr>
+<td>org.openwms.common.shared</td></tr>
 <tr class="b">
 <td>Version</td>
 <td>1.1.0-SNAPSHOT</td></tr>
 <tr class="a">
 <td>Type</td>
-<td>pom</td></tr></table></div></div>
+<td>jar</td></tr>
+<tr class="b">
+<td>Java Version</td>
+<td>1.8</td></tr></table></div></div>
       </div>
     </div>
     <div class="clear">
