--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
   <head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-    <title>org.openwms.common.service - About</title>
+    <title>org.openwms.common.comm - About</title>
     <style type="text/css" media="all">
       @import url("./css/maven-base.css");
       @import url("./css/maven-theme.css");
@@ -17,7 +17,7 @@
   <body class="composite">
     <div id="banner">
                     <div id="bannerLeft">
-                org.openwms.common.service
+                org.openwms.common.comm
                 </div>
                     <div class="clear">
         <hr/>
@@ -30,7 +30,7 @@
         <span id="publishDate">Last Published: 2016-08-25</span>
                   &nbsp;| <span id="projectVersion">Version: 1.1.0-SNAPSHOT</span>
                       </div>
-            <div class="xright">                    <a href="./" title="org.openwms.common.service">org.openwms.common.service</a>
+            <div class="xright">                    <a href="./" title="org.openwms.common.comm">org.openwms.common.comm</a>
               
                     
       </div>
@@ -111,7 +111,7 @@
     <div id="bodyColumn">
       <div id="contentBox">
         <div class="section">
-<h2>About org.openwms.common.service<a name="About_org.openwms.common.service"></a></h2><a name="About_org.openwms.common.service"></a>
+<h2>About org.openwms.common.comm<a name="About_org.openwms.common.comm"></a></h2><a name="About_org.openwms.common.comm"></a>
 <p>OpenWMS.org is an open source warehouse management software</p></div>
       </div>
     </div>
